--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Build
         run: |
           ${{ steps.detect-package-manager.outputs.runner }} run build
+          ls -al 'plugins/litapp/cooklang/tiddlers/js/lib/'
         working-directory: ${{ env.BUILD_PATH }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
