meta file for the library

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 node_modules
 **/output
-plugins/litapp/cooklang/tiddlers/js/lib
+plugins/litapp/cooklang/tiddlers/js/lib/*
+!plugins/litapp/cooklang/tiddlers/js/lib/*.meta
