--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,11 @@ concurrency:
 
 env:
   BUILD_PATH: "." # default value when not using subfolders
-  # BUILD_PATH: subfolder
 
 jobs:
   build:
+    permissions:
+      contents: write
     name: Build
     runs-on: ubuntu-latest
     steps:
@@ -55,6 +56,16 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
         working-directory: ${{ env.BUILD_PATH }}
+      - name:  'Automated Version Bump'
+        id: 'version-bump'
+        uses:  'phips28/gh-action-bump-version@master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          version-type:  'patch'
+      - name: Set Plugin version
+        run: |
+          ${{ steps.detect-package-manager.outputs.runner }} run set-plugin-version ${{ steps.version-bump.outputs.newTag}}
       - name: Build
         run: |
           ${{ steps.detect-package-manager.outputs.runner }} run build
