--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "esbuild": "^0.19.5",
     "execa": "^8.0.1",
     "prettier": "^3.0.3",
+    "semver": "^7.5.4",
     "tiddlywiki": "^5.3.1"
   },
   "dependencies": {
@@ -17,7 +18,7 @@
     "prettier": "prettier plugins src scripts --write"
   },
   "name": "cooklang-tiddlywiki",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Cooklang integration for Tiddlywiki",
   "repository": "https://github.com/carlo-colombo/cooklang-tiddlywiki",
   "author": "Carlo Colombo <carlo.colombo@gmx.com>",
