--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,6 +55,14 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
         working-directory: ${{ env.BUILD_PATH }}
+      - name: Bump version and push tag
+        id: bump_and_tag
+        uses: anothrNick/github-tag-action@1.66.0 # Don't use @master or @v1 unless you're happy to test the latest version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
+          WITH_V: false
+          INITIAL_VERSION: 0.1.0
+          DEFAULT_BUMP: patch
       - name: Build
         run: |
           ${{ steps.detect-package-manager.outputs.runner }} run build
