--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,11 +57,15 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
         working-directory: ${{ env.BUILD_PATH }}
       - name:  'Automated Version Bump'
+        id: 'version-bump'
         uses:  'phips28/gh-action-bump-version@master'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           version-type:  'patch'
+      - name: Set Plugin version
+        run: |
+          ${{ steps.detect-package-manager.outputs.runner }} run set-plugin-version ${{ steps.version-bump.outputs.newTag}}
       - name: Build
         run: |
           ${{ steps.detect-package-manager.outputs.runner }} run build
